--- a/src/music-page.html
+++ b/src/music-page.html
@@ -7,15 +7,13 @@
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="bg-slate-800 shadow-md p-10">
-      <h1 class="text-white text-5xl">Muziko</h1>
+    <nav class="bg-slate-800 shadow-md p-10 flex justify-between">
+      <a href="index.html" class="text-white text-5xl">Muziko</a>
+      <button class="text-white rounded-sm add-music">+ Add Music</button>
     </nav>
     <div class="bg-slate-500 min-h-screen">
       <div class="my-musics p-10">
         <p class="text-5xl">Loading your musics...</p>
-        <button>
-          <img class="w-6 h-6" src="./pen.png" alt="edit" />
-        </button>
       </div>
     </div>
     <script defer type="module" src="musicOperation.js"></script>
