--- a/src/music-page.html
+++ b/src/music-page.html
@@ -36,8 +36,20 @@
       >
         Add
       </button>
+      <button
+        type="button"
+        class="close"
+        style="
+          background-color: white;
+          padding: 10px 40px 10px 40px;
+          border-radius: 5px;
+        "
+      >
+        Close
+      </button>
     </form>
     <div class="bg-slate-500 min-h-screen">
+      <p class="notification absolute top-10 ml-2 text-white"></p>
       <div class="my-musics p-10">
         <p class="text-5xl">Loading your musics...</p>
       </div>
