somewhat feature complete ig

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,12 @@
   </head>
   <body>
     <section class="bg-slate-700 h-screen flex flex-col home">
-      <nav class="bg-slate-800 shadow-md p-10 w-screen">
+      <nav
+        class="bg-slate-800 shadow-md p-10 w-screen flex items-center"
+        style="gap: 2rem"
+      >
         <h1 class="text-white text-5xl">Muziko</h1>
+        <p class="text-white text-2xl welcome"></p>
       </nav>
       <div class="m-auto already-logged-in hidden">
         <div class="flex justify-center gap-4 items-center">
