--- a/src/music-page.html
+++ b/src/music-page.html
@@ -9,6 +9,7 @@
   <body>
     <nav class="bg-slate-800 shadow-md p-10 flex justify-between">
       <a href="index.html" class="text-white text-5xl muziko">Muziko</a>
+      <p class="text-white text-2xl welcome"></p>
       <button class="text-white rounded-sm add-music">+ Add Music</button>
     </nav>
     <form class="space-y-4 bg-slate-400 p-10 hidden form">
